--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 Library/
 UnityPackageManager/manifest.json
 ProfilerExtension.sln
+.vs/ProfilerExtensions/v15/Server/sqlite3/storage.ide-shm
+.vs/
+ProfilerExtensions.Editor.csproj
+ProfilerExtensions.sln
+Temp/
